Fully convert to ItemComponent system